fix: html iframe hidden in Live Preview
close [Bug] html iframe broken in Live Preview #234

--- a/apps/app/src/patch/embed-widget/embed-patch.global.css
+++ b/apps/app/src/patch/embed-widget/embed-patch.global.css
@@ -1,8 +1,12 @@
-.cm-content .mx-external-media-embed ~ img[data-mx-error] {
+.markdown-source-view.mod-cm6
+  .cm-content
+  .mx-external-media-embed
+  ~ img[data-mx-error] {
   display: none;
 }
 
-.cm-content :not(.mx-external-media-embed) iframe[src*="youtube.com/embed/"],
-.cm-content iframe[src*="youtube.com/embed/"] {
-  display: none !important;
+.markdown-source-view.mod-cm6
+  .cm-content
+  iframe.external-embed[src*="youtube.com/embed/"] {
+  display: none;
 }
